Modif logo et police + ajout réseau logo et liens

--- a/cv-tristan-bayol.html
+++ b/cv-tristan-bayol.html
@@ -12,7 +12,7 @@
 <body class="cv-container">
     <header class="cv-head">
         Tristan Bayol<br>
-        Etudiant Web Designer</div>
+        Etudiant Web Designer
         <nav></nav>
     </header>
 
@@ -21,32 +21,30 @@
         <!--sidebar-->
         <section class="left-part">
 
-            <img class="picture1" src="image/logo-pdf.jpeg" alt=""></div>
-
-            <h1>Reseau</h1>
+            <h1 class="title">Réseaux</h1>
             <p>
-                <a href="https://www.facebook.com/titou.bayol">Facebook</a>
-                Discord : kitsuli#9275
-                <a href=https://github.com/tristan-bayol>GitHub</a>
-            </p>
+                <a href="https://www.facebook.com/titou.bayol"><img src="image/icon-facebook.png"
+                            alt="Facebook"></a>
+                <a href="https://github.com/tristan-bayol"><img src="image/icon-github.png" alt="github"></a>
+                <a href="https://discordapp.com/users/201641110546677760"><img src="image/icon-discord.png" alt="Discord"></a>
+                </p>
 
-            <h1>Etudes</h1>
+            <h1 class="title">Etudes</h1>
             <article>
-
-                2023 à Aujourd'hui:<br>
+                <strong class="subtitle">2023 à Aujourd'hui:</strong><br>
                 Bachelor IT<br>
                 Formations aux métiers du numérique<br>
                 La Plateforme Cannes<br>
                 <address>1 Chemin de l'école, 06150 Cannes</address><br><br>
 
-                2007 - 2009 :<br>
+                <strong class="subtitle">2007 - 2009</strong><br>
                 Baccalauréat Professionel TMSEC<br>
                 Technicien de Maintenance des Systèmes Energetiques et Climatiques<br>
                 Lycée Professionel Régional du Batiment Vaudan<br>
                 <address>17 Bd Pierre Sola 06300 Nice</address><br><br>
             </article>
 
-            <h1>Contact</h1>
+            <h1 class="title">Contact</h1>
             <p>
             <address>
                 96 Chemin du Val Fleury<br>
@@ -62,33 +60,34 @@
         <!--Contenue-->
         <section class="right-part">
 
-            <h1>Profil</h1>
+            <h1 class="title">Profil</h1>
             <p>Je dois me decrire ici !!!!</p>
 
-            <h1>Expériences Professionnelles</h1>
+            <h1 class="title">Expériences Professionnelles</h1>
             <p>
-                Remiseur Dégareur<br>
+                <strong class="subtitle">Remiseur Dégareur</strong><br>
                 Avril 2012 à Juin 2022<br>
                 SNCF Technicentre PACA<br>
                 Conduite d'engins automoteurs et locomotives sur et hors du réseau RFN<br>
                 Réalisations d'essais des organes de sécurité nécessaires à la circulation d'un engin moteur<br>
                 Lieu : Marseille Blancarde, Cannes la Bocca<br><br>
 
-                Technicien de Maintenance des Systèmes Energetiques et Climatiques<br></li>
+                <strong class="subtitle">Technicien de Maintenance des Systèmes Energetiques et Climatiques</strong><br>
                 Septembre 2007 à Fevrier 2012<br>
                 COFELY GDF Suez<br>
                 Dépannage multitechnique : Electricité, plomberie, chauffage, climatisation, traitement d’air<br>
                 Divers sites : Texas Instruments, Hewlett Packard, CADAM, Hôpital de la Fontonne et Acropolis<br>
             </p>
 
-            <h1>Qualités</h1>
+            <h1 class="title">Qualités</h1>
             <p></p>
-            <h1>Software Skills</h1>
+            <h1 class="title">Software Skills</h1>
             <p>
-                <img class="picture1" src="image/logo-linux.jpg" alt="logo-linux" title="Linux">
-                <img class="picture1" src="image/logo-bash.jpeg" alt="logo-bash" title="Bash">
-                <img class="picture1" src="image/logo-htmlcss.jpg" alt="logo-html/css" title="Html/Css">
-                <img class="picture1" src="image/logo-cisco.jpeg" alt="logo-cisco" title="Cisco">
+                <img src="image/logo-linux.png" alt="logo-linux" title="Linux">
+                <img src="image/logo-bash.png" alt="logo-bash" title="Bash">
+                <img src="image/logo-debian.png" alt="logo-debian" title="Debian">
+                <img src="image/logo-html.png" alt="logo-html" title="Html">
+                <img src="image/logo-css.png" alt="logo-css" title="Css">
             </p>
         </section>
 
@@ -98,9 +97,9 @@
 <footer class="cv-foot">
     <p>
         <a href="https://drive.google.com/file/d/1h_f23hRLdN05eDlE0trFV56foOYfDofE/view?usp=drive_link">
-            <img class="picture1" src="image/logo-pdf.jpeg" alt="logo-pdf">
+            <img class="pdf-logo" src="image/logo-pdf.jpeg" alt="logo-pdf">
             Mon Cv au format PDF
-            <img class="picture1" src="image/logo-pdf.jpeg" alt="logo-pdf"></a>
+            <img class="pdf-logo" src="image/logo-pdf.jpeg" alt="logo-pdf"></a>
     </p>
 
 </footer>
