Mise en page du Head

--- a/cv-tristan-bayol.html
+++ b/cv-tristan-bayol.html
@@ -11,8 +11,12 @@
 
 <body class="cv-container">
     <header class="cv-head">
-        Tristan Bayol<br>
-        Etudiant Web Designer
+        <section class="head-left"></section>
+        <section class="head-right">
+            <strong class="title">Tristan Bayol</strong><br>
+            Etudiant Developpeur
+        </section>
+
         <nav></nav>
     </header>
 
@@ -23,11 +27,11 @@
 
             <h1 class="title">Réseaux</h1>
             <p>
-                <a href="https://www.facebook.com/titou.bayol"><img src="image/icon-facebook.png"
-                            alt="Facebook"></a>
+                <a href="https://www.facebook.com/titou.bayol"><img src="image/icon-facebook.png" alt="Facebook"></a>
                 <a href="https://github.com/tristan-bayol"><img src="image/icon-github.png" alt="github"></a>
-                <a href="https://discordapp.com/users/201641110546677760"><img src="image/icon-discord.png" alt="Discord"></a>
-                </p>
+                <a href="https://discordapp.com/users/201641110546677760"><img src="image/icon-discord.png"
+                        alt="Discord"></a>
+            </p>
 
             <h1 class="title">Etudes</h1>
             <article>
@@ -79,8 +83,8 @@
                 Divers sites : Texas Instruments, Hewlett Packard, CADAM, Hôpital de la Fontonne et Acropolis<br>
             </p>
 
-            <h1 class="title">Qualités</h1>
-            <p></p>
+            <h1 class="title">Compétences</h1>
+            <p>"Autonomie Rigueur Perséverance Assiduité" à mettre en forme !!!</p>
             <h1 class="title">Software Skills</h1>
             <p>
                 <img src="image/logo-linux.png" alt="logo-linux" title="Linux">
