ajout de commentaires

--- a/cv-tristan-bayol.html
+++ b/cv-tristan-bayol.html
@@ -22,9 +22,9 @@
 
 
     <main class="cv-content">
-        <!--sidebar-->
-        <section class="left-part">
 
+        <!--sidebar-->
+        <section class="left-part"><!--ajouter des logos a gauche de chaque titre-->
             <h1 class="title">Réseaux</h1>
             <p>
                 <a href="https://www.facebook.com/titou.bayol"><img src="image/icon-facebook.png" alt="Facebook"></a>
@@ -35,13 +35,13 @@
 
             <h1 class="title">Etudes</h1>
             <article>
-                <strong class="subtitle">2023 à Aujourd'hui:</strong><br>
+                <strong class="underligne">2023 à Aujourd'hui:</strong><br>
                 Bachelor IT<br>
                 Formations aux métiers du numérique<br>
                 La Plateforme Cannes<br>
                 <address>1 Chemin de l'école, 06150 Cannes</address><br><br>
 
-                <strong class="subtitle">2007 - 2009</strong><br>
+                <strong class="underligne">2007 - 2009</strong><br>
                 Baccalauréat Professionel TMSEC<br>
                 Technicien de Maintenance des Systèmes Energetiques et Climatiques<br>
                 Lycée Professionel Régional du Batiment Vaudan<br>
@@ -49,7 +49,6 @@
             </article>
 
             <h1 class="title">Contact</h1>
-            <p>
             <address>
                 96 Chemin du Val Fleury<br>
                 "Le Syrina Bat. C"<br>
@@ -57,55 +56,49 @@
             </address>
             06.59.75.49.15<br><br>
             tristan.bayol@laplateforme.io
+
+            <p class="title">Mon Cv au format PDF :
+                <a href="https://drive.google.com/file/d/1h_f23hRLdN05eDlE0trFV56foOYfDofE/view?usp=drive_link">
+                    <img id="pdf-logo" src="image/logo-pdf.jpeg" alt="logo-pdf"></a>
             </p>
         </section>
 
 
         <!--Contenue-->
-        <section class="right-part">
+        <section class="right-part"><!--Mise en forme a revoir sur toute la section-->
 
-            <h1 class="title">Profil</h1>
+            <h1 class="title">Profil</h1><!--Je dois travailler ma description-->
             <p>Je dois me decrire ici !!!!</p>
 
             <h1 class="title">Expériences Professionnelles</h1>
             <p>
-                <strong class="subtitle">Remiseur Dégareur</strong><br>
+                <strong class="underligne">Remiseur Dégareur</strong><br>
                 Avril 2012 à Juin 2022<br>
                 SNCF Technicentre PACA<br>
                 Conduite d'engins automoteurs et locomotives sur et hors du réseau RFN<br>
                 Réalisations d'essais des organes de sécurité nécessaires à la circulation d'un engin moteur<br>
-                Lieu : Marseille Blancarde, Cannes la Bocca<br><br>
+                <strong class="underligne">Lieu</strong> : Marseille Blancarde, Cannes la Bocca<br><br>
 
-                <strong class="subtitle">Technicien de Maintenance des Systèmes Energetiques et Climatiques</strong><br>
+                <strong class="underligne">Technicien de Maintenance des Systèmes Energetiques et Climatiques</strong><br>
                 Septembre 2007 à Fevrier 2012<br>
                 COFELY GDF Suez<br>
                 Dépannage multitechnique : Electricité, plomberie, chauffage, climatisation, traitement d’air<br>
-                Divers sites : Texas Instruments, Hewlett Packard, CADAM, Hôpital de la Fontonne et Acropolis<br>
+                <strong class="underligne">Lieu</strong> : Texas Instruments, CADAM, Hôpital de la Fontonne et Acropolis<br>
             </p>
 
-            <h1 class="title">Compétences</h1>
-            <p>"Autonomie Rigueur Perséverance Assiduité" à mettre en forme !!!</p>
+            <h1 class="title">Compétences</h1><!--Idem mise en forme !!!-->
+            <p>"Autonomie Rigueur Perséverance Assiduité"</p>
             <h1 class="title">Software Skills</h1>
-            <p>
-                <img src="image/logo-linux.png" alt="logo-linux" title="Linux">
-                <img src="image/logo-bash.png" alt="logo-bash" title="Bash">
-                <img src="image/logo-debian.png" alt="logo-debian" title="Debian">
-                <img src="image/logo-html.png" alt="logo-html" title="Html">
-                <img src="image/logo-css.png" alt="logo-css" title="Css">
+            <p><!--trouver comment mettre mes logo dans des cercles-->
+                <img class="skills-logo" src="image/logo-linux.png" alt="logo-linux" title="Linux">
+                <img class="skills-logo" src="image/logo-bash.png" alt="logo-bash" title="Bash">
+                <img class="skills-logo" src="image/logo-debian.png" alt="logo-debian" title="Debian">
+                <img class="skills-logo" src="image/logo-html.png" alt="logo-html" title="Html">
+                <img class="skills-logo" src="image/logo-css.png" alt="logo-css" title="Css">
             </p>
         </section>
 
     </main>
 </body>
-
-<footer class="cv-foot">
-    <p>
-        <a href="https://drive.google.com/file/d/1h_f23hRLdN05eDlE0trFV56foOYfDofE/view?usp=drive_link">
-            <img class="pdf-logo" src="image/logo-pdf.jpeg" alt="logo-pdf">
-            Mon Cv au format PDF
-            <img class="pdf-logo" src="image/logo-pdf.jpeg" alt="logo-pdf"></a>
-    </p>
-
-</footer>
-
+<footer></footer>
 </html>
