Ajout du model que j'ai voulu reproduire

--- a/cv-tristan-bayol.html
+++ b/cv-tristan-bayol.html
@@ -50,8 +50,8 @@
 
             <h1 class="title">Contact</h1>
             <address>
-                96 Chemin du Val Fleury<br>
-                "Le Syrina Bat. C"<br>
+                96 Chemin du Val Fleuri<br>
+                "Le Syrina Bât. C"<br>
                 06800 Cagnes sur Mer<br><br>
             </address>
             06.59.75.49.15<br><br>
@@ -67,7 +67,7 @@
         <!--Contenue-->
         <section class="right-part"><!--Mise en forme a revoir sur toute la section-->
 
-            <h1 class="title">Profil</h1><!--Je dois travailler ma description-->
+            <h1 class="title"><img src=""></a>Profil</h1><!--Je dois travailler ma description-->
             <p>Je dois me decrire ici !!!!</p>
 
             <h1 class="title">Expériences Professionnelles</h1>
@@ -76,7 +76,7 @@
                 Avril 2012 à Juin 2022<br>
                 SNCF Technicentre PACA<br>
                 Conduite d'engins automoteurs et locomotives sur et hors du réseau RFN<br>
-                Réalisations d'essais des organes de sécurité nécessaires à la circulation d'un engin moteur<br>
+                Réalisation d'essais des organes de sécurité nécessaires à la circulation d'un engin moteur<br>
                 <strong class="underligne">Lieu</strong> : Marseille Blancarde, Cannes la Bocca<br><br>
 
                 <strong class="underligne">Technicien de Maintenance des Systèmes Energetiques et Climatiques</strong><br>
