ajout lien bloomPetals

--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
             <p>
                 <a href="https://www.facebook.com/titou.bayol"><img src="image/icon-facebook.png" alt="Facebook"></a>
                 <a href="https://github.com/tristan-bayol"><img src="image/icon-github.png" alt="github"></a>
-                <a href="https://discordapp.com/users/201641110546677760"><img src="image/icon-discord.png"
-                        alt="Discord"></a>
+                <a href="https://discordapp.com/users/201641110546677760"><img src="image/icon-discord.png" alt="Discord"></a>
             </p>
 
             <h1 class="title">Etudes</h1>
@@ -79,11 +78,13 @@
                 Réalisation d'essais des organes de sécurité nécessaires à la circulation d'un engin moteur<br>
                 <strong class="underligne">Lieu</strong> : Marseille Blancarde, Cannes la Bocca<br><br>
 
-                <strong class="underligne">Technicien de Maintenance des Systèmes Energetiques et Climatiques</strong><br>
+                <strong class="underligne">Technicien de Maintenance des Systèmes Energetiques et
+                    Climatiques</strong><br>
                 Septembre 2007 à Fevrier 2012<br>
                 COFELY GDF Suez<br>
                 Dépannage multitechnique : Electricité, plomberie, chauffage, climatisation, traitement d’air<br>
-                <strong class="underligne">Lieu</strong> : Texas Instruments, CADAM, Hôpital de la Fontonne et Acropolis<br>
+                <strong class="underligne">Lieu</strong> : Texas Instruments, CADAM, Hôpital de la Fontonne et
+                Acropolis<br>
             </p>
 
             <h1 class="title">Compétences</h1><!--Idem mise en forme !!!-->
@@ -96,9 +97,13 @@
                 <img class="skills-logo" src="image/logo-html.png" alt="logo-html" title="Html">
                 <img class="skills-logo" src="image/logo-css.png" alt="logo-css" title="Css">
             </p>
+            <h1 class="title">Mes projets</h1>
+            <div>
+                <a href="https://tristan-bayol.students-laplateforme.io/bloomPetals/">BloomPetals</a>
+            </div>
         </section>
-
     </main>
+    <footer></footer>
 </body>
-<footer></footer>
+
 </html>
