--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 Installation et Configuration de routeur et de switch <br>
             </article>
 
-            <h2>ETUDES</h2>
+            <h2>FORMATIONS</h2>
             <article>
                 <strong class="underligne">Bachelor IT</strong><br>
                 2023 à Aujourd'hui:<br>
@@ -74,7 +74,7 @@
                 <a href="https://discordapp.com/users/201641110546677760"><img src="image/icon-discord.png" alt="Discord"></a>
             </p>
             <p class="title">Mon Cv au format PDF :
-                <a href="https://drive.google.com/file/d/1h_f23hRLdN05eDlE0trFV56foOYfDofE/view?usp=drive_link">
+                <a href="image/Mon Cv.pdf">
                     <img id="pdf-logo" src="image/logo-pdf.jpeg" alt="logo-pdf"></a>
             </p>
         </section>
